# audio_processing_matlab

./: .gitignore  CLAUDE.md  README.md  checkpoints.md  heli_noise.spec  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: dsp-reviewer.md  test-runner.md
.claude/hooks/: post_tool_use_ruff.py  pre_tool_use_guard.py  session_start.py  stop_run_tests.py
.claude/skills/dsp-pipeline/: SKILL.md
.claude/skills/ffmpeg-media/: SKILL.md
.claude/skills/qt-ui-conventions/: SKILL.md
.github/workflows/: build-windows.yml  ci.yml
docs/: manual_test_windows.md
scripts/: make_fixtures.py
src/heli_noise/: __init__.py  __main__.py
src/heli_noise/core/: __init__.py  dsp.py  exceptions.py  media.py  pipeline.py  timefmt.py
src/heli_noise/ui/: __init__.py  main_window.py  playback.py  spectrogram_canvas.py  spectrum_canvas.py  status_icon.py  strings.py  theme.py  worker.py
tests/: conftest.py  test_dsp.py  test_integration.py  test_main_window.py  test_media.py  test_pipeline.py  test_playback.py  test_smoke.py  test_spectrogram_canvas.py  test_spectrum_canvas.py  test_status_icon.py  test_timefmt.py  test_worker.py
