[project]
name = "heli-noise-analyzer"
version = "0.1.0"
description = "Helicopter Noise Analysis System - spectrogram analysis and band-stop filtering of helicopter audio recordings (Windows 10+ desktop app)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = { text = "Proprietary" }
authors = [{ name = "Huseyin Akdogan" }]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "PTH", # flake8-use-pathlib (paths must be pathlib.Path)
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B011"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
# QT_QPA_PLATFORM=offscreen is enforced in tests/conftest.py so that all
# Qt tests run headless in the cloud sandbox (no display available).
